--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_main_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Text Box"
@@ -19,15 +19,15 @@
         app:layout_constraintVertical_bias="0.050" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_main_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/accent"
+        android:background="@color/primary_dark"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView_main_1"
         app:layout_constraintVertical_bias="0.050" />
 
 </android.support.constraint.ConstraintLayout>
