--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -5,8 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SecondActivity"
-    android:paddingHorizontal="10dp"
-    android:paddingVertical="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     >
 
     <android.support.constraint.ConstraintLayout
@@ -19,24 +21,25 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="phone"
+            android:hint="Phone Number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.2"
-            app:layout_constraintBottom_toBottomOf="parent"
-             />
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <ImageButton
             android:id="@+id/SecondActivity_PhoneButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:tint="@android:color/background_dark"
+            android:contentDescription="Phone Button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/SecondActivity_PhoneText"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.2"
-            app:srcCompat="@android:drawable/stat_sys_phone_call" />
+            app:srcCompat="@android:drawable/stat_sys_phone_call"/>
 
         <EditText
             android:id="@+id/SecondActivity_WebText"
@@ -44,6 +47,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
+            android:hint="Web URL"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,11 +61,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:tint="@android:color/background_dark"
+            android:contentDescription="Web Button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/SecondActivity_WebText"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.4"
             app:srcCompat="@android:drawable/stat_sys_download" />
+
+        <ImageButton
+            android:id="@+id/SecondActivity_CameraButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:tint="@android:color/background_dark"
+            android:contentDescription="Camera Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.7"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
 
 
     </android.support.constraint.ConstraintLayout>
