--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -16,9 +16,10 @@
         android:layout_height="match_parent">
 
         <SeekBar
-            android:id="@+id/seekBar_edad"
+            android:id="@+id/secondActivity_AgeSeekBar"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:max="100"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,43 +28,55 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/secondActivity_ageTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/seekBar_edad"
+            app:layout_constraintTop_toBottomOf="@id/secondActivity_AgeSeekBar"
             app:layout_constraintVertical_bias="0.1"
-            app:layout_constraintBottom_toTopOf="@+id/radioGroup_tipoSaludo" />
+            app:layout_constraintBottom_toTopOf="@+id/secondActivity_typeRadioGroup" />
 
         <RadioGroup
-            android:id="@+id/radioGroup_tipoSaludo"
+            android:id="@+id/secondActivity_typeRadioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/seekBar_edad"
+            app:layout_constraintTop_toBottomOf="@id/secondActivity_AgeSeekBar"
             app:layout_constraintVertical_bias="0.4"
             app:layout_constraintBottom_toBottomOf="parent" >
 
             <RadioButton
-                android:id="@+id/radioButton_hello"
+                android:id="@+id/secondActivity_helloRadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Saludo" />
 
             <RadioButton
-                android:id="@+id/radioButton_bye"
+                android:id="@+id/secondActivity_byeRadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Despedida" />
         </RadioGroup>
 
+        <Button
+            android:id="@+id/secondActivity_nextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/primary_dark"
+            android:text="Next"
+            android:textColor="@color/primary_text"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
 
